--- a/style.css
+++ b/style.css
@@ -6,9 +6,12 @@
     transition: backgound-color 0.9s ease, color 0.5s ease;
 }
 
-@media(max-width: 1450px){
+@media(min-width:1100px) and (max-width: 1450px){
   .botoes{
     font-size: 80%;
+  }
+  body>.apres{
+    margin-left: 20%;
   }
 }
 
@@ -16,15 +19,32 @@
   .botoes{
     font-size: 24%;
       width:102%;
+      padding-right: 9.2%;
+      margin-bottom: 24%;
   }
   .apres>.nome{
     font-size: 300%;
+    padding-right:40%;
   }
   .apres>.ola{
- font-size: 200%;
+    font-size: 200%;
+    margin-right: 15%;
   }
   body>#footer{
     font-size: 100%;
+  }
+}
+
+@media (min-width:735px) and (max-width:900px){
+ .botoes{
+    font-size: 44%;
+    min-width: 110%;
+  }
+  body>div{
+ padding-right: 20%;
+  }
+  .github{
+    padding-left: 20%;
   }
 }
 
@@ -37,8 +57,9 @@ body{
   --bgcolor: #FD6D20;
   --fontecolor: #FD6D20;
   --bgbotoes:white;
+--transition-duration: 600ms;
+  --transition-bg: var(--bgcolor, #ffffff);
 }
-
 .darkmode{
  --bgcolor: #BC4200;
  --fontecolor: #BC4200;
@@ -47,10 +68,53 @@ body{
 
 .ola{
    font-size: 350%;
+   transition: 0.3s;
+}
+
+.ola:hover{
+  margin-top: -3%;
+  margin-bottom: 3%;
+  transition: 0.3s;
 }
 
 .nome{
     font-size: 700%;
+    transition: 0.3s;
+}
+.nome:hover{
+  margin-top: -3%;
+  margin-bottom: 3%;
+  transition: 0.3s;
+}
+
+@keyframes toActive {
+  from {
+    transform: translateY(900%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.nome{
+  animation: toActive 1.8s ease-out 1;
+}
+
+@keyframes toActive2 {
+  from {
+    transform: translateY(300%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.ola{
+  animation: toActive2 1.3s ease-out 1;
 }
 
 .apres{
@@ -60,6 +124,7 @@ body{
     margin-top: 13%;
     margin-left: 29.3%;
     text-align: center;
+
 }
 
 .botoes{
@@ -68,6 +133,27 @@ body{
     align-items: center;
     margin-left: 10%;
     margin-top: 13%;
+}
+
+.abtn{
+transition: 0.5s;
+}
+
+#b1:hover{
+  margin-top: -11%;
+  transition: 0.5s;
+}
+#b2:hover{
+  margin-top: -11%;
+  transition: 0.5s;
+}
+#b3:hover{
+  margin-top: -11%;
+  transition: 0.5s;
+}
+#b4:hover{
+  margin-top: -11%;
+  transition: 0.5s;
 }
 
 .botoes>a{
@@ -184,6 +270,3 @@ body{
  margin-top: 15%;
  color: var(--bgbotoes);
 }
-
-
-
